--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                             <div class="form-request__cell field">
                                 <label class="field__label" for="phone">Номер телефона</label>
                                 <input class="field__control" type="tel" id="phone" name="phone"
-                                    placeholder="+791 775 509 29" required>
+                                    placeholder="+7 917 755 09 29" required>
                             </div>
                             <div class="form-request__cell field">
                                 <label class="field__label" for="message">Комментарии к грузу</label>
