социальные сети скрыла

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                 info@jar-cargo.ru
                             </a>
                         </div>
-                        <div class="menu-mob__socials">
+                        <div class="menu-mob__socials visually-hidden">
                             <ul class="menu-mob__socials-list">
                                 <li class="menu-mob__socials-item">
                                     <a href="javascript:void(0);" class="menu-mob__socials-link"></a>
@@ -1479,7 +1479,7 @@
                 </div>
 
                 <!-- Правая колонка (социальные сети) -->
-                <div class="footer__right">
+                <div class="footer__right visually-hidden">
                     <h6 class="footer__title footer-label">Мы в социальных сетях</h6>
                     <ul class="footer__social-list">
                         <li class="footer__social-item">
