убрала анимация процесса

--- a/index.html
+++ b/index.html
@@ -1257,31 +1257,31 @@
                                 <div class="process__circle-inner"></div>
                             </div>
                         </li>
-                        <li class="process__item">
+                        <li class="process__item process__item--active">
                             <p class="process__text">Перезваниваем для <br> уточнения деталей</p>
                             <div class="process__circle">
                                 <div class="process__circle-inner"></div>
                             </div>
                         </li>
-                        <li class="process__item">
+                        <li class="process__item process__item--active">
                             <p class="process__text">Считаем<br> оптимизированную смету <br>с учётом плана доставки</p>
                             <div class="process__circle">
                                 <div class="process__circle-inner"></div>
                             </div>
                         </li>
-                        <li class="process__item">
+                        <li class="process__item process__item--active">
                             <p class="process__text">Контроль на всех<br> этапах</p>
                             <div class="process__circle">
                                 <div class="process__circle-inner"></div>
                             </div>
                         </li>
-                        <li class="process__item">
+                        <li class="process__item process__item--active">
                             <p class="process__text">Запускаем в реализацию</p>
                             <div class="process__circle">
                                 <div class="process__circle-inner"></div>
                             </div>
                         </li>
-                        <li class="process__item">
+                        <li class="process__item process__item--active">
                             <p class="process__text">Заключаем договор. <br>Выставляем счёт</p>
                             <div class="process__circle">
                                 <div class="process__circle-inner"></div>
