--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JAR-CARGO</title>
-    <link href="./icons/favicons/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./icons/favicons/apple-touch-icon-57x57.svg" />
+    <!-- Favicons start-->
+    <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link rel="apple-touch-icon-precomposed" sizes="60x60" href="./icons/favicons/apple-touch-icon-60x60.svg" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./icons/favicons/apple-touch-icon-72x72.svg" />
     <link rel="apple-touch-icon-precomposed" sizes="76x76" href="./icons/favicons/apple-touch-icon-76x76.svg" />
@@ -21,11 +21,10 @@
     <link rel="icon" type="image/png" href="./icons/favicons/favicon-128.svg" sizes="128x128" />
     <link rel="icon" type="image/png" href="./icons/favicons/favicon-196x196.svg" sizes="196x196" />
     <meta name="msapplication-square70x70logo" content="./icons/favicons/mstile-70x70.svg" />
-    <meta name="msapplication-TileImage" content="./icons/favicons/mstile-144x144.svg" />
     <meta name="msapplication-square150x150logo" content="./icons/favicons/mstile-150x150.svg" />
     <meta name="msapplication-wide310x150logo" content="./icons/favicons/mstile-310x150.svg" />
     <meta name="msapplication-square310x310logo" content="./icons/favicons/mstile-310x310.svg" />
-
+    <!-- Favicons end-->
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./libs/plugins/swiper-bundle.min.css">
     <link rel="stylesheet" href="./libs/plugins/animate.min.css">
