правки(убрана пошаговая анимация на загрузке)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         fill="#0063C7" />
                 </svg>
             </div>
-            <div class="loading-screen__text">Сбор груза</div>
+            <div class="loading-screen__text">JAR-CARGO</div>
         </div>
     </div>
     <!--—END LOADING -->
@@ -180,9 +180,9 @@
                                 в&nbsp;любую точку России
                                 и&nbsp;за&nbsp;рубеж&nbsp;&mdash; быстро, безопасно и&nbsp;без лишних затрат</p>
                         </div>
-                        <a href="#transportation-cost" class="button button-calc wow fadeInUp" data-wow-duration="1s"
-                            data-wow-delay="1.5s">Расчёт
-                            стоимости <span class="icon icon--right-arrow"> </span>
+                        <a href="tel:+78003510960" class="button button-calc wow fadeInUp" data-wow-duration="1s"
+                            data-wow-delay="1.5s" title="Phone" aria-label="Phone">+7 (800) 351-09-60 <span
+                                class="icon icon--right-arrow"> </span>
                         </a>
                     </div>
                 </div>
@@ -450,7 +450,7 @@
                             <div class="form-request__cell field">
                                 <label class="field__label" for="weight">Вес груза (от 25 кг)</label>
                                 <input class="field__control" type="number" id="weight" name="weight"
-                                    placeholder=">25 кг" min="25" required>
+                                    placeholder=">25 кг" min="25" required inputmode="numeric" pattern="\d*">
                             </div>
                             <div class="form-request__cell field">
                                 <label class="field__label" for="phone">Номер телефона</label>
